--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,6 +30,7 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.core-3.3.2.jar=..\\..\\Videos\\jars\\core-3.3.2.jar
+file.reference.Desktop-need_a_clean=..\\need a clean
 file.reference.GMapsFX-8.0.0.jar=..\\..\\Downloads\\GMapsFX-8.0.0.jar
 file.reference.gson-2.8.2.jar=..\\..\\Downloads\\gson-2.8.2.jar
 file.reference.javax.mail.jar=..\\..\\Downloads\\javax.mail.jar
@@ -46,7 +47,8 @@ javac.classpath=\
     ${file.reference.TrayNotification.jar}:\
     ${file.reference.core-3.3.2.jar}:\
     ${file.reference.stripe-java-7.22.0.jar}:\
-    ${file.reference.gson-2.8.2.jar}
+    ${file.reference.gson-2.8.2.jar}:\
+    ${file.reference.Desktop-need_a_clean}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
