--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -107,7 +107,8 @@ javac.classpath=\
     ${file.reference.javafx.graphics.jar}:\
     ${file.reference.javafx.media.jar}:\
     ${file.reference.javafx.swing.jar}:\
-    ${file.reference.javafx.web.jar}
+    ${file.reference.javafx.web.jar}:\
+    ${libs.JAVAFX.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
