--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -3,7 +3,7 @@ annotation.processing.enabled.in.editor=false
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-application.title=HelloFX
+application.title=test
 application.vendor=OpenJFX
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
@@ -29,10 +29,10 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/HelloFX.jar
+dist.jar=${dist.dir}/test.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/HelloFX
+dist.jlink.output=${dist.jlink.dir}/test
 endorsed.classpath=
 excludes=
 file.reference.activation-1.1.jar=C:\\Program Files\\Java\\jar_files\\activation-1.1.jar
@@ -143,7 +143,7 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=HelloFX
+jlink.launcher.name=test
 jnlp.codebase.type=no.codebase
 jnlp.descriptor=application
 jnlp.enabled=false
