--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,13 +30,21 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.core-3.3.2.jar=..\\..\\Videos\\jars\\core-3.3.2.jar
+file.reference.core-3.4.0.jar=..\\..\\..\\Downloads\\core-3.4.0.jar
 file.reference.Desktop-need_a_clean=..\\need a clean
 file.reference.GMapsFX-8.0.0.jar=..\\..\\Downloads\\GMapsFX-8.0.0.jar
+file.reference.GMapsFX-8.0.0.jar-1=..\\..\\..\\Downloads\\GMapsFX-8.0.0.jar
 file.reference.gson-2.8.2.jar=..\\..\\Downloads\\gson-2.8.2.jar
+file.reference.gson-2.8.2.jar-1=..\\..\\..\\Downloads\\gson-2.8.2.jar
+file.reference.itextpdf-5.5.9.jar=..\\..\\..\\Downloads\\itextpdf-5.5.9.jar
 file.reference.javax.mail.jar=..\\..\\Downloads\\javax.mail.jar
+file.reference.javax.mail.jar-1=..\\..\\..\\Downloads\\javax.mail.jar
 file.reference.jfoenix-8.0.2.jar=..\\..\\Downloads\\jfoenix-8.0.2.jar
+file.reference.jfoenix-8.0.2.jar-1=..\\..\\..\\Downloads\\jfoenix-8.0.2.jar
 file.reference.stripe-java-7.22.0.jar=..\\..\\Downloads\\stripe-java-7.22.0.jar
+file.reference.stripe-java-7.22.0.jar-1=..\\..\\..\\Downloads\\stripe-java-7.22.0.jar
 file.reference.TrayNotification.jar=..\\..\\Downloads\\TrayNotification.jar
+file.reference.TrayNotification.jar-1=..\\..\\..\\Downloads\\TrayNotification.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -48,7 +56,15 @@ javac.classpath=\
     ${file.reference.core-3.3.2.jar}:\
     ${file.reference.stripe-java-7.22.0.jar}:\
     ${file.reference.gson-2.8.2.jar}:\
-    ${file.reference.Desktop-need_a_clean}
+    ${file.reference.Desktop-need_a_clean}:\
+    ${file.reference.GMapsFX-8.0.0.jar-1}:\
+    ${file.reference.TrayNotification.jar-1}:\
+    ${file.reference.core-3.4.0.jar}:\
+    ${file.reference.itextpdf-5.5.9.jar}:\
+    ${file.reference.javax.mail.jar-1}:\
+    ${file.reference.jfoenix-8.0.2.jar-1}:\
+    ${file.reference.gson-2.8.2.jar-1}:\
+    ${file.reference.stripe-java-7.22.0.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
